--- a/core/components/modlivestreet/docs/changelog.txt
+++ b/core/components/modlivestreet/docs/changelog.txt
@@ -1,4 +1,9 @@
-modLivestreet Full 0.5.6
+modLivestreet Full 0.6.1
+===============================================================
+1.  Smarty->modx bugfix
+
+
+modLivestreet Full 0.6.0
 ===============================================================
 1.  Search bugfix
 2.  Installer update
